--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,14 @@ h2, h3, h4, h5 {
   float: left;
 }
 
+.grad-date {
+  font-style: italic;
+  font-size: 14px;
+  color: #999999;
+  line-height: 16px;
+  float: right;
+}
+
 .location-text {
   font-style: italic;
   font-size: 14px;
@@ -106,6 +114,12 @@ a {
 .white-text {
   font-weight: bold;
   color: #FFFFFF;
+}
+
+.white-text-link {
+  font-weight: bold;
+  color: #FFFFFF;
+  cursor:pointer;
 }
 
 .gray {
